# my_start_base_app_fastapi

./: .gitignore  README.md  pyproject.toml
src/: .env.template  main.py
src/alembic/: env.py
src/core/: config.py
src/core/models/: base.py  db_helper.py
